# frida

./: .gitattributes  .gitignore  .gitmodules  .openroad  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  env.sh  frame_rate.py  gtd.md  helena.md  hosts.openmpi  license.md  makefile  makefile.old  pyproject.toml  readme.md  requirements.txt  shell.nix  sim_fom.py  tspice_to_spectre.md  ty.toml  veridian.yaml  veridian.yml  verilator.vlt
15_05/: report.tex
adc/: capdriver.v  clkgate.v  config.mk  constraint.sdc  io.tcl  macro_placement.tcl  sampswitch.v
ahdl/: tb_comp.va  tb_inv.va  tb_nand2.va  tb_samp.va
alt/: __init__.py  cdac.py  comp.py  conftest.py  measure.py  samp.py  sim.py
behavioral/: vco.vams
blocks/: adc.py  cdac.py  comp.py  inv.py  nand2.py  salogic.py  samp.py
daq/: __init__.py  plan.md  sequencer.py
design/: adc.v  caparray.v  capdriver.v  compmux.v  config.mk  constraint.sdc  frida_core.v  frida_top.v  io.tcl  macro_placement.cfg  pad.tcl  pad_blackboxes.v  salogic.v  sampdriver.v  sampswitch.v  spi_register.v
design_notes/: depfet_control.md  detectors_xfel.md  edet.md  fom.ods  optical_magnification.md
doc/: Mathematics.md  digital.md
docs/: 02_01_2024.md  2023-09-13-15-21-34.md  2023-09-22-10-43-08.md  2023_08_01.md  20_12_2023.md  21_12_2023.md  2_fom_afe.md  2_particle_matter.md  4_optimization.md  4_readout_circuits.md  Concept.md  Conversation with Lars.md  HDL additions.md  OpenSTA.txt  adc.json  anagen_notes.md  analog_comp.v  analysis.md  analytic.md  analytic.tex  analytic_paper.md  analytic_paper.tex  background.md  badlog.txt  bag-plan.md  beams.tex  build_system.md  cadence.md  capacitors.md  caparray_extraction.md  cdac.md  chapters.md  checklist.md  chip.md  chip_design.md  ciccreator.md  common_skills.md  comp.md  comparison.md  concurrency.md  (+131 more)
edet/: edet_architectures.drawio  slides.tex
env/: oss_cad.sh  setup_frida_orfs.sh
etc/: Makefile  adc.cdl  caparray.cdl  comp.cdl  strongarm_helena.sp  synth.ys  tb_adc_full.sp  tb_adc_quick.sp  tb_inv_65.sp  tb_simple.sp  test_simple.raw
example/: io.rs  lib.rs  vdiv.rs
flow/: __init__.py  cli.py  common.py  conftest.py  expression.py  measure.py  netlist.py  pdks.py  plot.py  plotnet.py  simulate.py  visualize.py
hdl/: Makefile  adc.v  adc_complete.sp  adc_complete_synth.ys  adc_complete_synth_report.txt  adc_digital.v  adc_macro.v  caparray.v  capdriver.v  clkgate.v  comp.v  salogic.v  sampdriver.v  sampswitch.v  spi_register.v  strongarm_bag.sp  strongarm_cic.sp  strongarm_cordia.sp  strongarm_cordia_sizes.sp  strongarm_helena.sp  test_nand2.sp
ip/: Makefile  adc.v  caparray.v  capdriver.v  clkgate.v  comp.cic  comp.json  comp.spi  comp.v  core.v  inv_tb.sp  salogic.v  sampctl.v  sampctl_tb.v  sampswitch.v  sar.v  sar_tb.v  si.env  spi.v  spi_tb.v  strongarm_bag.sp  switch_ctrl.v  switch_ctrl_tb.v  synth.ys  synth_sar.ys  synth_sar_advanced.ys  synth_sar_asic.ys  synth_sar_gates.ys  synth_switch_ctrl.ys  synth_switch_ctrl_advanced.ys  synth_switch_ctrl_asic.ys  synth_switch_ctrl_gates.ys  tgate.va
lib/: tb.rs
notes/: 0_outline.md  1_background.md  28nm.md  2_fom_afe.md  3_semiconductor_sensors.md  anagen_notes.md  bag.md  circuits_modeling.md  detector_review.py  detectors.md  devices.md  edet.md  fom.ods  fom_microscopy.md  foss_layout.md  jitter.md  math.md  pixel_detector_suvery.ods  pixels.md  proposal.md  rust.md  signals.md  simulation.md  spice.md  substrate.md  test.py  transistor_layouts.md  trtem_application.md
oa/: cds.lib  data.dm  inca.lnx8664.110.pak  lib.defs  lib.defs.lnk  phase_detectors.vams  top.va  vco.va
old/: behavioral.py  caparray.py  expressions_old.py  makefile
pcb/: #auto_saved_files#  frida.bak  frida65A.kicad_prl  frida65A.kicad_sch-bak  sym-lib-table
pdk/: __init__.py  test.py  test_supply_rails.py  test_walker_scaling.py
phys/: analyze_sweep.py  detector.conf  detector_comparison.tex  model.py  pixel.conf  placement.conf  plan.md  run_sweep.sh  simulation.conf  simulation_electron.conf  simulation_photon.conf  sweep.py  template.scs  template.sp  workspace.sh
resources/: database_nch.npy  dut  netlist_ngspice.sp
rtl/: 1_synth.v  adc.v  adc_digital.v  cells_ihp_sg13g2.v  cells_tsmc65.v  clkgate.v  compmux.v  frida_core.v  frida_top.v  frida_top_ihp.v  frida_top_tsmc65.v  salogic.v  sampdriver.v  spi_register.v
scratch_backup/: netlist_xyce_bad.sp
scripts/: characterize_technology.py  dff_generation_with_laygo2_for_sky130.py  mpi_worker.sh
sim/: SB_saradc8_radix1p75.sp  SB_saradc8_radix1p80.sp  SB_saradc8_radix1p85.sp  SB_saradc8_radix2p00.sp  SB_saradc8_radixN.sp  adc_sim.yaml  dynamic_error.py  ideal_dac.py  readme.md  sar_adc_runs.py  sar_adc_sim.py  spice.py  static_error.py
source/: test.py
spectre/: SB_saradc8_radixN.scs  netlist_fix.py  psfascii_to_plot_adc.py  tspice_to_spectre.md
spice/: README_portable_inverter.md  adc.cdl  adc_digital.cdl  caparray.cdl  capdriver.cdl  comp.cdl  comp_doubletail.sp  comp_doubletail.toml  comp_moddoubletail.sp  comp_modified_doubletail.sp  comp_selfdoubletail.sp  comp_selfmoddoubletail.sp  comp_selftimed_doubletail.sp  comp_selftimed_modified_doubletail.sp  comp_strongarm.sp  comp_tripletail.sp  concat_netlists.py  core.cdl  dnw.cdl  dnw.sp  frida_complete.cdl  frida_top.cdl  generate_netlists.toml  inv_static.sp  inv_static.toml  inverter.sp  nand2_static.sp  nand2_static.toml  samp_nmos.sp  samp_nmos.toml  samp_pmos.sp  samp_pmos.toml  samp_tgate.py  samp_tgate.sp  samp_tgate.toml  sampswitch.cdl  schem.txt  strongarm_bag.sp  strongarm_cordia.sp  strongarm_frida.sp  (+19 more)
src/: adc.py  analytic.py  analyze_results.py  analyze_spice.py  basic_compile.py  behavioral.py  caparray.py  cdac.py  cdac_layout.py  cdac_topbss.py  characterize_technology.py  comp.py  comp_doubletail.py  comp_moddoubletail.py  comp_selfdoubletail.py  comp_selfmoddoubletail.py  comp_strongarm.py  comp_tripletail.py  convert_netlist.tcl  design_doc.ipynb  design_doc.py  example_raw.py  figures.py  gate_inv.py  generate_netlists.py  generate_testbench.py  ideal_dac.py  inv.py  (+41 more)
(+5386 files in other folders)
