[package]
name = "fastroic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate = { version = "0.8.1", registry = "substrate" }
spice = { version = "0.7.1", registry = "substrate" }

serde = { version = "1", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"