[project]
name = "frida"
version = "0.1.0"
requires-python = "==3.12.11"
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "pytest",
    "argcomplete",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "hdl21",
    "vlsir",
    "vlsirtools",
    "gdsfactory",
    "basil-daq",
]

[tool.uv.sources]
hdl21 = { path = "../libs/Hdl21", editable = true }
vlsir = { path = "../libs/Vlsir/bindings/python", editable = true }
vlsirtools = { path = "../libs/Vlsir/VlsirTools", editable = true }
gdsfactory = { path = "../libs/gdsfactory", editable = true }
basil-daq = { path = "../libs/basil", editable = true }

[tool.basedpyright]
typeCheckingMode = "off"
extraPaths = ["../libs/Hdl21", "../libs/Vlsir/VlsirTools", "../libs/Vlsir/bindings/python"]

[tool.ruff]
exclude = ["old/"]

[tool.ruff.lint]
ignore = ["E741"]  # Allow 'l' for transistor length

[tool.pytest.ini_options]
addopts = ["-k", "not test_plot"]
testpaths = ["flow", "pdk"]
python_files = ["test_*.py", "serialize.py", "mosfet.py", "momcap.py", "layout.py"]
# Suppress protobuf deprecation warning from vlsirtools dependency.
# The warning is about Python 3.14 C API changes in google._upb._message.
# Vlsir pins protobuf~=4.23 (in libs/Vlsir/bindings/python/setup.py),
# which prevents upgrading to protobuf 5.x/6.x where this may be fixed.
filterwarnings = [
    "ignore:Type google._upb._message:DeprecationWarning",
]
