[project]
name = "frida"
version = "0.1.0"
requires-python = "==3.12.11"
dependencies = [
    # Core
    "numpy",
    "scipy",
    "pydantic",
    "pytest",
    "argcomplete",
    # Circuit design (hdl21/vlsir ecosystem)
    "klayout",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "hdl21",
    "vlsir",
    "vlsirtools",
    # DAQ + simulation
    "basil-daq",
    "cocotb",
    "cocotb-bus",
    "cocotbext-ams",
    "spicebind",
    "spyci",
    "vcdvcd",
    "pexpect",
    "gitpython",
    "bitarray",
    "pyvisa",
    "pyvisa-py",
    # Layout
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flow", "pdk"]

[project.scripts]
flow = "flow.cli:main"

[tool.uv]
package = true

[tool.uv.sources]
hdl21 = { path = "libs/Hdl21", editable = true }
vlsir = { path = "libs/Vlsir/bindings/python", editable = true }
vlsirtools = { path = "libs/Vlsir/VlsirTools", editable = true }
basil-daq = { path = "libs/basil", editable = true }
spicebind = { path = "libs/spicebind", editable = true }
cocotb = { path = "libs/cocotb", editable = true }
cocotbext-ams = { path = "libs/cocotbext-ams", editable = true }

[tool.pyright]
# Keep a single pyright config here. Zed uses basedpyright for Python,
# and basedpyright reads [tool.pyright] too.
typeCheckingMode = "off"
# ROOT (PyROOT) is built from source at ~/libs/root/ (C++17, no pip package).
# Add its Python bindings path so the type checker can resolve `import ROOT`.
extraPaths = ["libs/Hdl21", "libs/Vlsir/VlsirTools", "libs/Vlsir/bindings/python", "../libs/root/lib"]
exclude = [
    "**/libs/cocotbext-ams",
    "**/libs/spicebind",
    "**/libs/basil",
]

[tool.ruff]
line-length = 120
exclude = ["libs/cocotbext-ams", "libs/spicebind", "libs/basil"]

[tool.ruff.lint]
ignore = ["E741"]  # Allow 'l' for transistor length

[tool.ruff.lint.per-file-ignores]
"**/old/**" = ["F841", "F401"]
"pdk/**" = ["F401", "F403", "F405"]

[project.entry-points.pytest11]
cocotb = "cocotb_tools.pytest.plugin"

[tool.pytest.ini_options]
addopts = ["-k", "not test_plot"]
testpaths = ["flow", "pdk"]
python_files = ["test_*.py", "test.py", "serialize.py", "layout.py"]
markers = [
    "hw: requires physical FPGA hardware (skip with -m 'not hw')",
]
# Suppress protobuf deprecation warning from vlsirtools dependency.
# The warning is about Python 3.14 C API changes in google._upb._message.
# Vlsir pins protobuf~=4.23 (in libs/Vlsir/bindings/python/setup.py),
# which prevents upgrading to protobuf 5.x/6.x where this may be fixed.
filterwarnings = [
    "ignore:Type google._upb._message:DeprecationWarning",
]
